--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <div class="ui list">
             <a class="item" href=https://www.openhub.net/accounts/thombashi>openhub</a>
             <a class="item" href=https://twitter.com/thombashi>twitter</a>
+            <a class="item" href=http://qiita.com/vmmhypervisor>Qiita</a>
         </div>
         
         <script>
@@ -66,6 +67,7 @@
         <footer>
             Tsuyoshi Hombashi (gogogo.vm@gmail.com)
         </footer>
+        
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
