--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset='UTF-8'>
     <title>thombashi.github.io</title>
 
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.7/semantic.min.css'>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.css'>
     <link rel='stylesheet' href='css/toc.css'>
-    <link rel='stylesheet' href='https://afeld.github.io/emoji-css/emoji.css'>
-
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.7/semantic.min.js'></script>
-    <script src='js/toc.min.js'></script>
-    <script src='js/write_items.js'></script>
-
+    <!--
     <style type='text/css'>
         .ui.card {
             width: 480px;
         }
     </style>
+    -->
+
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.js'></script>
+    <script src='js/toc.min.js'></script>
+    <script src='js/write_items.js'></script>
 </head>
 <body>
     <div id='toc'></div>
@@ -25,7 +25,7 @@
     <h1 class='ui block header'>
         GitHub
     </h1>
-    <div class='ghcard' src='data/thombashi.json' emoji='resolve'></div>
+    <div class='ghscard' src='data/thombashi.json'></div>
 
     <h1 class='ui block header'>
         CLI Tools
@@ -79,7 +79,7 @@
         </script>
     </div>
 
-    <script src='js/ghstaticcard.min.js' charset='utf-8'></script>
+    <script src='js/ghscard.min.js' charset='utf-8'></script>
 
     <h1 class='ui block header'>
         Links
