--- a/index.html
+++ b/index.html
@@ -6,13 +6,6 @@
 
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.css'>
     <link rel='stylesheet' href='css/toc.css'>
-    <!--
-    <style type='text/css'>
-        .ui.card {
-            width: 480px;
-        }
-    </style>
-    -->
 
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.js'></script>
@@ -47,6 +40,7 @@
     <div class='ui relaxed items'>
         <script>
             var cardNameArray = [
+                'thombashi_appconfigpy.json',
                 'thombashi_DataProperty',
                 'thombashi_DateTimeRange',
                 'thombashi_mbstrdecoder',
