--- a/index.html
+++ b/index.html
@@ -29,12 +29,10 @@
     </h1>
     <div class='ui relaxed items'>
         <script>
-            var cardNameArray = [
+            writeCardItems([
                 'thombashi_sqlitebiter',
                 'thombashi_tcconfig',
-            ];
-
-            writeCardItems(cardNameArray);
+            ]);
         </script>
     </div>
 
@@ -43,8 +41,8 @@
     </h1>
     <div class='ui relaxed items'>
         <script>
-            var cardNameArray = [
-                'thombashi_appconfigpy.json',
+            writeCardItems([
+                'thombashi_appconfigpy',
                 'thombashi_DataProperty',
                 'thombashi_DateTimeRange',
                 'thombashi_mbstrdecoder',
@@ -56,9 +54,18 @@
                 'thombashi_SimpleSQLite',
                 'thombashi_sqliteschema',
                 'thombashi_subprocrunner',
-            ];
+            ]);
+        </script>
+    </div>
 
-            writeCardItems(cardNameArray);
+    <h1 class='ui block header'>
+        Jupyter Notebook
+    </h1>
+    <div class='ui relaxed items'>
+        <script>
+            writeCardItems([
+                'thombashi_PythonExamples',
+            ]);
         </script>
     </div>
 
@@ -67,13 +74,11 @@
     </h1>
     <div class='ui relaxed items'>
         <script>
-            var cardNameArray = [
+            writeCardItems([
                 'thombashi_allpairspy',
                 'thombashi_NFStest',
                 'thombashi_Connectathon_README',
-            ];
-
-            writeCardItems(cardNameArray);
+            ]);
         </script>
     </div>
 
