--- a/index.html
+++ b/index.html
@@ -76,9 +76,11 @@
         <script>
             writeCardItems([
                 'thombashi_allpairspy',
-                'thombashi_NFStest',
             ]);
         </script>
+        <div class='item'>
+            <div class='ghscard' src='data/thombashi_NFStest.json' chart-visibility='hidden'></div>
+        </div>
     </div>
 
     <script src='js/ghscard.min.js' charset='utf-8'></script>
