--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
     </div>
 
-    <script src='https://cdn.rawgit.com/thombashi/ghscard/10ee04f6/dist/ghscard.min.js'></script>
+    <script src='https://rawgit.com/thombashi/ghscard/master/dist/ghscard.min.js'></script>
 
     <h1 class='ui block header'>
         Links
