--- a/ghscard/demo/index.html
+++ b/ghscard/demo/index.html
@@ -9,6 +9,7 @@
 
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.0/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.js'></script>
+    <script src='js/write_items.js'></script>
 </head>
 <body>
     <h1 class="ui dividing header">
@@ -26,92 +27,59 @@
             <a class="item" data-tab="fourth">16 - 20</a>
         </div>
         <div class="ui bottom attached tab segment active" data-tab="first">
-            <div class="ui items">
-                <div class="item">
-                    <div class="ghscard" src="data/freeCodeCamp_freeCodeCamp.json"></div>
-                </div>
-                <div class="item">
-                    <div class="ghscard" src="data/twbs_bootstrap.json"></div>
-                </div>
-                <div class="item">
-                    <div class="ghscard" src="data/vhf_free-programming-books.json"></div>
-                </div>
-                <div class="item">
-                    <div class="ghscard" src="data/facebook_react.json"></div>
-                </div>
-                <div class="item">
-                    <div class="ghscard" src="data/d3_d3.json"></div>
-                </div>
-            </div>
+            <script>
+                writeCardItems([
+                    ["data/freeCodeCamp_freeCodeCamp.json", "data/freeCodeCamp.json"],
+                    ["data/twbs_bootstrap.json", "data/twbs.json"],
+                    ["data/vhf_free-programming-books.json", "data/vhf.json"],
+                    ["data/facebook_react.json", "data/facebook.json"],
+                    ["data/d3_d3.json", "data/d3.json"],
+                ]);
+            </script>
         </div>
         <div class="ui bottom attached tab segment" data-tab="second">
-            <div class="ui items">
-                <div class="item">
-                    <div class="ghscard" src="data/angular_angular.js.json"></div>
-                </div>
-                <div class="item">
-                    <div class="ghscard" src="data/sindresorhus_awesome.json"></div>
-                </div>
-                <div class="item">
-                    <div class="ghscard" src="data/getify_You-Dont-Know-JS.json"></div>
-                </div>
-                <div class="item">
-                    <div class="ghscard" src="data/tensorflow_tensorflow.json"></div>
-                </div>
-                <div class="item">
-                    <div class="ghscard" src="data/robbyrussell_oh-my-zsh.json"></div>
-                </div>
-            </div>
+            <script>
+                writeCardItems([
+                    ["data/angular_angular.js.json", "data/angular.json"],
+                    ["data/sindresorhus_awesome.json", "data/sindresorhus.json"],
+                    ["data/getify_You-Dont-Know-JS.json", "data/getify.json"],
+                    ["data/tensorflow_tensorflow.json", "data/tensorflow.json"],
+                    ["data/robbyrussell_oh-my-zsh.json", "data/robbyrussell.json"],
+                ]);
+            </script>
         </div>
         <div class="ui bottom attached tab segment" data-tab="third">
-            <div class="ui items">
-                <div class="item">
-                    <div class="ghscard" src="data/airbnb_javascript.json"></div>
-                </div>
-                <div class="item">
-                    <div class="ghscard" src="data/FortAwesome_Font-Awesome.json"></div>
-                </div>
-                <div class="item">
-                    <div class="ghscard" src="data/github_gitignore.json"></div>
-                </div>
-                <div class="item">
-                    <div class="ghscard" src="data/vuejs_vue.json"></div>
-                </div>
-                <div class="item">
-                    <div class="ghscard" src="data/facebook_react-native.json"></div>
-                </div>
-            </div>
+            <script>
+                writeCardItems([
+                    ["data/airbnb_javascript.json", "data/airbnb.json"],
+                    ["data/FortAwesome_Font-Awesome.json", "data/FortAwesome.json"],
+                    ["data/github_gitignore.json", "data/github.json"],
+                    ["data/data/vuejs_vue.json", "data/vuejs.json"],
+                    ["data/facebook_react-native.json", "data/facebook.json"],
+                ]);
+            </script>
         </div>
         <div class="ui bottom attached tab segment" data-tab="fourth">
-            <div class="ui items">
-                <div class="item">
-                    <div class="ghscard" src="data/jquery_jquery.json"></div>
-                </div>
-                <div class="item">
-                    <div class="ghscard" src="data/electron_electron.json"></div>
-                </div>
-                <div class="item">
-                    <div class="ghscard" src="data/torvalds_linux.json"></div>
-                </div>
-                <div class="item">
-                    <div class="ghscard" src="data/docker_docker.json"></div>
-                </div>
-                <div class="item">
-                    <div class="ghscard" src="data/daneden_animate.css.json"></div>
-                </div>
-            </div>
+            <script>
+                writeCardItems([
+                    ["data/jquery_jquery.json", "data/jquery.json"],
+                    ["data/electron_electron.json", "data/electron.json"],
+                    ["data/torvalds_linux.json", "data/torvalds.json"],
+                    ["data/docker_docker.json", "data/docker.json"],
+                    ["data/daneden_animate.css.json", "data/daneden.json"],
+                ]);
+            </script>
         </div>
     </div>
 
     <script src="https://rawgit.com/thombashi/ghscard/master/dist/ghscard.min.js"></script>
     <!--
     <script src="js/ghscard.js"></script>
-    <script src="https://cdn.rawgit.com/thombashi/ghscard/10ee04f6/dist/ghscard.min.js"></script>
     -->
-    
+
     <script>
         $('.menu .item').tab();
     </script>
-    
+
 </body>
 </html>
