--- a/ghscard/examples/index.html
+++ b/ghscard/examples/index.html
@@ -3,6 +3,6 @@
 <body>
     <div class='ghscard' src='data/thombashi.json'></div>
 
-    <script src='js/ghscard.min.js'></script>
+    <script src='https://rawgit.com/thombashi/ghscard/master/dist/ghscard.min.js'></script>
 </body>
 </html>
