--- a/ghscard/demo/index.html
+++ b/ghscard/demo/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.css">
 
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.0/jquery.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.js'></script>
     <script src='js/write_items.js'></script>
 </head>
@@ -25,65 +25,40 @@
     </h1>
 
     <div class="ui basic segment">
-        <div class="ui top attached tabular menu">
-            <a class="item active" data-tab="first">1 - 5</a>
-            <a class="item" data-tab="second">6 - 10</a>
-            <a class="item" data-tab="third">11 - 15</a>
-            <a class="item" data-tab="fourth">16 - 20</a>
-        </div>
-        <div class="ui bottom attached tab segment active" data-tab="first">
-            <script>
-                writeCardItems([
-                    ["data/freeCodeCamp_freeCodeCamp.json", "data/freeCodeCamp.json"],
-                    ["data/twbs_bootstrap.json", "data/twbs.json"],
-                    ["data/vhf_free-programming-books.json", "data/vhf.json"],
-                    ["data/facebook_react.json", "data/facebook.json"],
-                    ["data/d3_d3.json", "data/d3.json"],
-                ]);
-            </script>
-        </div>
-        <div class="ui bottom attached tab segment" data-tab="second">
-            <script>
-                writeCardItems([
-                    ["data/angular_angular.js.json", "data/angular.json"],
-                    ["data/sindresorhus_awesome.json", "data/sindresorhus.json"],
-                    ["data/getify_You-Dont-Know-JS.json", "data/getify.json"],
-                    ["data/tensorflow_tensorflow.json", "data/tensorflow.json"],
-                    ["data/robbyrussell_oh-my-zsh.json", "data/robbyrussell.json"],
-                ]);
-            </script>
-        </div>
-        <div class="ui bottom attached tab segment" data-tab="third">
-            <script>
-                writeCardItems([
-                    ["data/airbnb_javascript.json", "data/airbnb.json"],
-                    ["data/FortAwesome_Font-Awesome.json", "data/FortAwesome.json"],
-                    ["data/github_gitignore.json", "data/github.json"],
-                    ["data/vuejs_vue.json", "data/vuejs.json"],
-                    ["data/facebook_react-native.json", "data/facebook.json"],
-                ]);
-            </script>
-        </div>
-        <div class="ui bottom attached tab segment" data-tab="fourth">
-            <script>
-                writeCardItems([
-                    ["data/jquery_jquery.json", "data/jquery.json"],
-                    ["data/electron_electron.json", "data/electron.json"],
-                    ["data/torvalds_linux.json", "data/torvalds.json"],
-                    ["data/docker_docker.json", "data/docker.json"],
-                    ["data/daneden_animate.css.json", "data/daneden.json"],
-                ]);
-            </script>
-        </div>
+    <script>
+        writeCardItems([
+            ["data/freeCodeCamp_freeCodeCamp.json", "data/freeCodeCamp.json"],
+            ["data/twbs_bootstrap.json", "data/twbs.json"],
+            ["data/vhf_free-programming-books.json", "data/vhf.json"],
+            ["data/facebook_react.json", "data/facebook.json"],
+            ["data/d3_d3.json", "data/d3.json"],
+            ["data/angular_angular.js.json", "data/angular.json"],
+            ["data/sindresorhus_awesome.json", "data/sindresorhus.json"],
+            ["data/getify_You-Dont-Know-JS.json", "data/getify.json"],
+            ["data/tensorflow_tensorflow.json", "data/tensorflow.json"],
+            ["data/robbyrussell_oh-my-zsh.json", "data/robbyrussell.json"],
+            ["data/airbnb_javascript.json", "data/airbnb.json"],
+            ["data/FortAwesome_Font-Awesome.json", "data/FortAwesome.json"],
+            ["data/github_gitignore.json", "data/github.json"],
+            ["data/vuejs_vue.json", "data/vuejs.json"],
+            ["data/facebook_react-native.json", "data/facebook.json"],
+            ["data/jquery_jquery.json", "data/jquery.json"],
+            ["data/electron_electron.json", "data/electron.json"],
+            ["data/torvalds_linux.json", "data/torvalds.json"],
+            ["data/docker_docker.json", "data/docker.json"],
+            ["data/daneden_animate.css.json", "data/daneden.json"],
+        ]);
+    </script>
     </div>
 
-    <script src="https://rawgit.com/thombashi/ghscard/master/dist/ghscard.min.js"></script>
-    <!--
     <script src="js/ghscard.js"></script>
+    <!--
+    </div>
+    <script src="https://rawgit.com/thombashi/ghscard/master/dist/ghscard.min.js"></script>
     -->
 
     <script>
-        $('.menu .item').tab();
+        //$('.menu .item').tab();
 
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -93,5 +68,6 @@
         ga('create', 'UA-71868288-5', 'auto');
         ga('send', 'pageview');
     </script>
+
 </body>
 </html>
