--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                 'thombashi_pytablewriter',
                 'thombashi_pingparsing',
                 'thombashi_pytablereader',
-                'thombashi_pytypeutil',
                 'thombashi_SimpleSQLite',
                 'thombashi_sqliteschema',
                 'thombashi_subprocrunner',
+                'thombashi_typepy',
             ]);
         </script>
     </div>
