--- a/ghscard/examples/quickstart.html
+++ b/ghscard/examples/quickstart.html
@@ -1,5 +1,10 @@
 <!doctype html>
 <html>
+<head>
+    <title>
+        ghscard quick start
+    </title>
+</head>
 <body>
     <div class='ghscard' src='data/thombashi.json'></div>
 
