--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset='UTF-8'>
     <title>thombashi.github.io</title>
 
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.css'>
+    <link rel='stylesheet' href='//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.css'>
     <link rel='stylesheet' href='css/toc.css'>
 
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.js'></script>
+    <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+    <script src='//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.js'></script>
     <script src='js/toc.min.js'></script>
     <script src='js/write_items.js'></script>
 </head>
@@ -83,15 +83,15 @@
         </div>
     </div>
 
-    <script src='https://rawgit.com/thombashi/ghscard/master/dist/ghscard.min.js'></script>
+    <script src='//rawgit.com/thombashi/ghscard/master/dist/ghscard.min.js'></script>
 
     <h1 class='ui block header'>
         Links
     </h1>
     <div class='ui list'>
-        <a class='item' href=https://www.openhub.net/accounts/thombashi>openhub</a>
-        <a class='item' href=https://twitter.com/thombashi>twitter</a>
-        <a class='item' href=http://qiita.com/vmmhypervisor>Qiita</a>
+        <a class='item' href=//www.openhub.net/accounts/thombashi>openhub</a>
+        <a class='item' href=//twitter.com/thombashi>twitter</a>
+        <a class='item' href=//qiita.com/vmmhypervisor>Qiita</a>
     </div>
 
     <script>
