--- a/ghscard/demo/index.html
+++ b/ghscard/demo/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <title>ghscard demo</title>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.css">
 
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.js'></script>
+    <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+    <script src='//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.js'></script>
     <script src='js/write_items.js'></script>
 </head>
 <body>
@@ -50,7 +50,7 @@
         </script>
     </div>
 
-    <script src="https://rawgit.com/thombashi/ghscard/master/dist/ghscard.min.js"></script>
+    <script src="//rawgit.com/thombashi/ghscard/master/dist/ghscard.min.js"></script>
     <!--
     <script src="js/ghscard.js"></script>
     -->
