--- a/ghscard/examples/card-style.html
+++ b/ghscard/examples/card-style.html
@@ -3,7 +3,7 @@
 <head>
     <title>ghscard examles: card-style</title>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.css">
 </head>
 <body>
     <a href="https://github.com/thombashi/ghscard">
@@ -13,35 +13,34 @@
     <h1 class='ui dividing header'>
         User Cards
     </h1>
-
     <div class="ui basic segment">
-        <h2 class='ui dividing header'>card-style: medium</h2>
+        <h2 class='ui dividing header'>card-style="medium"</h2>
         <div id="user" class="ghscard" src="data/thombashi.json" card-style="medium"></div>
 
-        <h2 class='ui dividing header'>card-style: small</h2>
+        <h2 class='ui dividing header'>card-style="small"</h2>
         <div id="user" class="ghscard" src="data/thombashi.json" card-style="small"></div>
 
-        <h2 class='ui dividing header'>card-style: tiny</h2>
+        <h2 class='ui dividing header'>card-style="tiny"</h2>
         <div id="user" class="ghscard" src="data/thombashi.json" card-style="tiny"></div>
     </div>
 
+    
     <h1 class='ui dividing header'>
         Repository Cards
     </h1>
-
     <div class="ui basic segment">
-        <h2 class='ui dividing header'>card-style: medium</h2>
+        <h2 class='ui dividing header'>card-style="medium"</h2>
         <div class="ghscard" src="data/Microsoft_TypeScript.json" card-style="medium"></div>
 
-        <h2 class='ui dividing header'>card-style: small</h2>
+        <h2 class='ui dividing header'>card-style="small"</h2>
         <div class="ghscard" src="data/Microsoft_TypeScript.json" card-style="small"></div>
 
-        <h2 class='ui dividing header'>card-style: tiny</h2>
+        <h2 class='ui dividing header'>card-style="tiny"</h2>
         <div class="ghscard" src="data/Microsoft_TypeScript.json" card-style="tiny"></div>
     </div>
 
-    <script src='https://rawgit.com/thombashi/ghscard/master/dist/ghscard.min.js'></script>
     
+    <script src='//rawgit.com/thombashi/ghscard/master/dist/ghscard.min.js'></script>
 
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
