--- a/ghscard/quickstart/index.html
+++ b/ghscard/quickstart/index.html
@@ -8,6 +8,6 @@
 <body>
     <div class='ghscard' src='data/thombashi.json'></div>
 
-    <script src='https://rawgit.com/thombashi/ghscard/master/dist/ghscard.min.js'></script>
+    <script src='//rawgit.com/thombashi/ghscard/master/dist/ghscard.min.js'></script>
 </body>
 </html>
