--- a/ghscard/demo/index.html
+++ b/ghscard/demo/index.html
@@ -6,9 +6,9 @@
 
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.css">
 
-    <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-    <script src='//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.js'></script>
-    <script src='js/write_items.js'></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.js"></script>
+    <script src="js/write_items.js"></script>
 </head>
 <body>
     <a href="https://github.com/thombashi/ghscard">
@@ -18,7 +18,7 @@
     <h1 class="ui dividing header">
         <i class="github square icon"></i>
         <div class="content">
-            <a href="https://github.com/thombashi/ghscard">ghscard</a>
+            <a href="//github.com/thombashi/ghscard">ghscard</a>
             Demo: Popular Repositories on GitHub
         </div>
     </h1>
@@ -56,13 +56,13 @@
     -->
 
     <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (function(i,s,o,g,r,a,m){i["GoogleAnalyticsObject"]=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        })(window,document,"script","https://www.google-analytics.com/analytics.js","ga");
 
-        ga('create', 'UA-71868288-5', 'auto');
-        ga('send', 'pageview');
+        ga("create", "UA-71868288-5", "auto");
+        ga("send", "pageview");
     </script>
 </body>
 </html>
