--- a/ghscard/examples/card-style.html
+++ b/ghscard/examples/card-style.html
@@ -10,46 +10,55 @@
         <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png">
     </a>
 
-    <h1 class='ui dividing header'>
+    <h1 class="ui block header">
+        <div class="content">
+            <a href="//github.com/thombashi/ghscard">ghscard</a>
+            Examples: card-style attribute
+        </div>
+    </h1>
+
+    <h1 class="ui dividing header">
+        <i class="user icon"></i>
         User Cards
     </h1>
     <div class="ui basic segment">
-        <h2 class='ui dividing header'>card-style="medium"</h2>
+        <h2 class="ui dividing header">card-style="medium"</h2>
         <div id="user" class="ghscard" src="data/thombashi.json" card-style="medium"></div>
 
-        <h2 class='ui dividing header'>card-style="small"</h2>
+        <h2 class="ui dividing header">card-style="small"</h2>
         <div id="user" class="ghscard" src="data/thombashi.json" card-style="small"></div>
 
-        <h2 class='ui dividing header'>card-style="tiny"</h2>
+        <h2 class="ui dividing header">card-style="tiny"</h2>
         <div id="user" class="ghscard" src="data/thombashi.json" card-style="tiny"></div>
     </div>
 
     
-    <h1 class='ui dividing header'>
+    <h1 class="ui dividing header">
+        <i class="book icon"></i>
         Repository Cards
     </h1>
     <div class="ui basic segment">
-        <h2 class='ui dividing header'>card-style="medium"</h2>
+        <h2 class="ui dividing header">card-style="medium"</h2>
         <div class="ghscard" src="data/Microsoft_TypeScript.json" card-style="medium"></div>
 
-        <h2 class='ui dividing header'>card-style="small"</h2>
+        <h2 class="ui dividing header">card-style="small"</h2>
         <div class="ghscard" src="data/Microsoft_TypeScript.json" card-style="small"></div>
 
-        <h2 class='ui dividing header'>card-style="tiny"</h2>
+        <h2 class="ui dividing header">card-style="tiny"</h2>
         <div class="ghscard" src="data/Microsoft_TypeScript.json" card-style="tiny"></div>
     </div>
 
     
-    <script src='//rawgit.com/thombashi/ghscard/master/dist/ghscard.min.js'></script>
+    <script src="//rawgit.com/thombashi/ghscard/master/dist/ghscard.min.js"></script>
 
     <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (function(i,s,o,g,r,a,m){i["GoogleAnalyticsObject"]=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        })(window,document,"script","https://www.google-analytics.com/analytics.js","ga");
 
-        ga('create', 'UA-71868288-5', 'auto');
-        ga('send', 'pageview');
+        ga("create", "UA-71868288-5", "auto");
+        ga("send", "pageview");
     </script>
 </body>
 </html>
