--- a/ghscard/examples/card-style.html
+++ b/ghscard/examples/card-style.html
@@ -22,7 +22,7 @@
         User Cards
     </h1>
     <div class="ui basic segment">
-        <h2 class="ui dividing header">card-style="medium"</h2>
+        <h2 class="ui dividing header">card-style="medium" (default)</h2>
         <div id="user" class="ghscard" src="data/thombashi.json" card-style="medium"></div>
 
         <h2 class="ui dividing header">card-style="small"</h2>
@@ -38,7 +38,7 @@
         Repository Cards
     </h1>
     <div class="ui basic segment">
-        <h2 class="ui dividing header">card-style="medium"</h2>
+        <h2 class="ui dividing header">card-style="medium" (default)</h2>
         <div class="ghscard" src="data/Microsoft_TypeScript.json" card-style="medium"></div>
 
         <h2 class="ui dividing header">card-style="small"</h2>
