--- a/ghscard/examples/chart-display.html
+++ b/ghscard/examples/chart-display.html
@@ -18,7 +18,7 @@
     </h1>
 
     <div class="ui basic segment">
-        <h1 class="ui dividing header">chart-display="block" (default)</h1>
+        <h1 class="ui dividing header">chart-display="block"</h1>
         <div class="ghscard" src="data/Microsoft_TypeScript.json" chart-display="block"></div>
     </div>
 
