--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@
     </div>
 
     <h1 class='ui block header'>
+        JavaScript Widget
+    </h1>
+    <div class='ui relaxed items'>
+        <script>
+            writeCardItems([
+                'thombashi_ghscard',
+            ]);
+        </script>
+    </div>
+
+    <h1 class='ui block header'>
         Python Libraries
     </h1>
     <div class='ui relaxed items'>
@@ -79,7 +90,7 @@
             ]);
         </script>
         <div class='item'>
-            <div class='ghscard' src='data/thombashi_NFStest.json' chart-visibility='hidden'></div>
+            <div class='ghscard' src='data/thombashi_NFStest.json' chart-display='none'></div>
         </div>
     </div>
 
