--- a/ghscard/quickstart/index.html
+++ b/ghscard/quickstart/index.html
@@ -6,8 +6,17 @@
     </title>
 </head>
 <body>
-    <div class='ghscard' src='data/thombashi.json'></div>
-
+    <table border="0">
+        <tr>
+            <td>
+                <div class='ghscard' src='data/thombashi.json'></div>
+            </td>
+            <td>
+                <div class="ghscard" src="data/Microsoft_TypeScript.json"></div>
+            </td>
+        </tr>
+    </table>
+    
     <script src='//rawgit.com/thombashi/ghscard/master/dist/ghscard.min.js'></script>
 </body>
 </html>
