--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset='UTF-8'>
-    <title>thombashi.github.io</title>
+    <title>thombashi　GitHub　repositories</title>
 
     <link rel='stylesheet' href='//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.css'>
     <link rel='stylesheet' href='css/toc.css'>
@@ -20,7 +20,7 @@
     <div id='toc'></div>
 
     <h1 class='ui block header'>
-        GitHub
+        GitHub Profile
     </h1>
     <div class='ghscard' src='data/thombashi.json'></div>
 
@@ -46,6 +46,9 @@
             ]);
         </script>
     </div>
+    GitHub cards in this page are created by 
+    <a href=//github.com/thombashi/ghscard>ghscard</a>.
+
 
     <h1 class='ui block header'>
         Python Libraries
