Change email address

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </script>
 
     <footer>
-        Tsuyoshi Hombashi (gogogo.vm@gmail.com)
+        Tsuyoshi Hombashi (tsuyoshi.hombashi@gmail.com)
     </footer>
 
     <script>
