--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
     <meta charset='UTF-8'>
     <title>thombashi　GitHub　repositories</title>
@@ -12,9 +13,11 @@
     <script src='js/toc.min.js'></script>
     <script src='js/write_items.js'></script>
 </head>
+
 <body>
     <a href="https://github.com/thombashi/thombashi.github.io">
-        <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png">
+        <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67"
+            alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png">
     </a>
 
     <div id='toc'></div>
@@ -31,6 +34,7 @@
         <script>
             writeCardItems([
                 'thombashi_sqlitebiter',
+                'thombashi_thank-you-stars',
                 'thombashi_tcconfig',
             ]);
         </script>
@@ -46,13 +50,12 @@
             ]);
         </script>
     </div>
+
     GitHub cards in this page are created by
-    <a href=//github.com/thombashi/ghscard>ghscard</a>.
+    <a href=//github.com/thombashi/ghscard>ghscard </a>. <br>
 
+    <h1 class='ui block header'> Python Libraries </h1>
 
-    <h1 class='ui block header'>
-        Python Libraries
-    </h1>
     <div class='ui relaxed items'>
         <script>
             writeCardItems([
@@ -67,6 +70,7 @@
                 'thombashi_SimpleSQLite',
                 'thombashi_sqliteschema',
                 'thombashi_subprocrunner',
+                'thombashi_tblfaker',
                 'thombashi_typepy',
             ]);
         </script>
@@ -103,27 +107,26 @@
         Links
     </h1>
     <div class='ui list'>
-        <a class='item' href=//www.openhub.net/accounts/thombashi>openhub</a>
-        <a class='item' href=//twitter.com/thombashi>twitter</a>
-        <a class='item' href=//qiita.com/vmmhypervisor>Qiita</a>
-    </div>
-
-    <script>
-        $('#toc').toc();
-    </script>
+        <a class='item' href=//www.openhub.net/accounts/thombashi>openhub </a> <a class='item' href=//twitter.com/thombashi>twitter
+            </a> <a class='item' href=//qiita.com/vmmhypervisor>Qiita </a> </div> <script>
+                $('#toc').toc();
+            </script>
 
     <footer>
         Tsuyoshi Hombashi (tsuyoshi.hombashi@gmail.com)
     </footer>
 
     <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
         ga('create', 'UA-71868288-5', 'auto');
         ga('send', 'pageview');
     </script>
 </body>
+
 </html>
