--- a/index.html
+++ b/index.html
@@ -107,10 +107,13 @@
         Links
     </h1>
     <div class='ui list'>
-        <a class='item' href=//www.openhub.net/accounts/thombashi>openhub </a> <a class='item' href=//twitter.com/thombashi>twitter
-            </a> <a class='item' href=//qiita.com/vmmhypervisor>Qiita </a> </div> <script>
-                $('#toc').toc();
-            </script>
+        <a class='item' href=//www.openhub.net/accounts/thombashi>openhub </a>
+        <a class='item' href=//twitter.com/thombashi>twitter </a>
+    </div>
+    
+    <script>
+        $('#toc').toc();
+    </script>
 
     <footer>
         Tsuyoshi Hombashi (tsuyoshi.hombashi@gmail.com)
