--- a/ghscard/examples/user.html
+++ b/ghscard/examples/user.html
@@ -1,13 +1,16 @@
 <!doctype html>
 <html>
+
 <head>
     <title>
         ghscard example: user
     </title>
 </head>
+
 <body>
     <div class='ghscard' src='data/thombashi.json'></div>
 
-    <script src='//rawgit.com/thombashi/ghscard/master/dist/ghscard.min.js'></script>
+    <script src='//cdn.jsdelivr.net/gh/thombashi/ghscard@master/dist/ghscard.min.js'></script>
 </body>
+
 </html>
