--- a/ghscard/quickstart/index.html
+++ b/ghscard/quickstart/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
 <html>
+
 <head>
     <title>
         ghscard quick start
     </title>
 </head>
+
 <body>
     <table border="0">
         <tr>
@@ -16,7 +18,8 @@
             </td>
         </tr>
     </table>
-    
-    <script src='//rawgit.com/thombashi/ghscard/master/dist/ghscard.min.js'></script>
+
+    <script src='//cdn.jsdelivr.net/gh/thombashi/ghscard@master/dist/ghscard.min.js'></script>
 </body>
+
 </html>
