--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset='UTF-8'>
     <title>thombashi　GitHub　repositories</title>
 
-    <link rel='stylesheet' href='//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.css'>
+    <link rel='stylesheet' type="text/css" href='//cdn.jsdelivr.net/npm/fomantic-ui@2.8.3/dist/semantic.min.css'>
+
     <link rel='stylesheet' href='css/toc.css'>
 
-    <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-    <script src='//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.js'></script>
+    <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
+    <script src='//cdn.jsdelivr.net/npm/fomantic-ui@2.8.3/dist/semantic.min.js'></script>
     <script src='js/toc.min.js'></script>
     <script src='js/write_items.js'></script>
 </head>
@@ -105,6 +106,7 @@
         </div>
 
         <script src='//cdn.jsdelivr.net/gh/thombashi/ghscard@master/dist/ghscard.min.js'></script>
+        <!-- <script src='js/ghscard.min.js'></script> -->
 
         <h1 class='ui block header'>
             Links
