--- a/ghscard/demo/index.html
+++ b/ghscard/demo/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <title>ghscard demo</title>
 
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.css">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/fomantic-ui@2.8.3/dist/semantic.min.css">
 
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/fomantic-ui@2.8.3/dist/semantic.min.js"></script>
     <script src="js/write_items.js"></script>
 </head>
 
@@ -62,10 +62,10 @@
 
     <script>
         (function (i, s, o, g, r, a, m) {
-        i["GoogleAnalyticsObject"] = r; i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+            i["GoogleAnalyticsObject"] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
         })(window, document, "script", "https://www.google-analytics.com/analytics.js", "ga");
 
         ga("create", "UA-71868288-5", "auto");
