--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
     <script src='//cdn.jsdelivr.net/npm/fomantic-ui@2.8.3/dist/semantic.min.js'></script>
-    <script src='//cdn.jsdelivr.net/npm/@firstandthird/toc@2.1.0/dist/toc.js'></script>
+    <script src='js/toc.min.js'></script>
     <script src='js/write_items.js'></script>
 </head>
 
