--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
         </div>
 
-        <script src='//cdn.jsdelivr.net/gh/thombashi/ghscard@master/dist/ghscard.min.js'></script>
+        <script src='//cdn.jsdelivr.net/npm/ghscard@0.4.1/dist/ghscard.min.js'></script>
         <!-- <script src='js/ghscard.min.js'></script> -->
 
         <h1 class='ui block header'>
