--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
         <script>
             writeCardItems([
                 'thombashi_pytest-md-report',
+                'pytest-discord',
             ]);
         </script>
     </div>
