--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <script>
             writeCardItems([
                 'thombashi_pytest-md-report',
-                'pytest-discord',
+                'thombashi_pytest-discord',
             ]);
         </script>
     </div>
