--- a/index.html
+++ b/index.html
@@ -34,13 +34,18 @@
         Sponsors
     </h2>
     <div class='ui relaxed items'>
-        <a href="https://github.com/chasbecker">
-            <img src="https://avatars0.githubusercontent.com/u/44389260?s=48&u=6da7176e51ae2654bcfd22564772ef8a3bb22318&v=4"
-                 alt="Charles Becker (chasbecker)"
-                 title="Charles Becker (chasbecker)">
+        <a href="https://github.com/b4tman">
+            <img src="https://avatars.githubusercontent.com/u/3658062?s=48&v=4" alt="onetime: Dmitry Belyaev (b4tman)"
+                title="onetime: Dmitry Belyaev (b4tman)" width="48" height="48">
         </a>
-        <br>
-        <a href="https://github.com/sponsors/thombashi">Become a sponsor</a>
+        <a href="https://github.com/chasbecker">
+            <img src="https://avatars.githubusercontent.com/u/44389260?s=48&u=6da7176e51ae2654bcfd22564772ef8a3bb22318&v=4"
+                alt="Charles Becker (chasbecker)" title="Charles Becker (chasbecker)">
+        </a>
+        <a href="https://github.com/Arturi0">
+            <img src="https://avatars.githubusercontent.com/u/46711571?s=48&u=57687c0e02d5d6e8eeaf9177f7b7af4c9f275eb5&v=4"
+                alt="onetime: Arturi0" title="onetime: Arturi0">
+        </a>
     </div>
 
     <h1 class='ui block header'>
