--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset='UTF-8'>
     <title>thombashi　GitHub　repositories</title>
 
-    <link rel='stylesheet' type="text/css" href='//cdn.jsdelivr.net/npm/fomantic-ui@2.8.6/dist/semantic.min.css'>
+    <link rel='stylesheet' type="text/css" href='//cdn.jsdelivr.net/npm/fomantic-ui@2.8.7/dist/semantic.min.css'>
 
     <link rel='stylesheet' href='css/toc.css'>
 
     <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
-    <script src='//cdn.jsdelivr.net/npm/fomantic-ui@2.8.6/dist/semantic.min.js'></script>
+    <script src='//cdn.jsdelivr.net/npm/fomantic-ui@2.8.7/dist/semantic.min.js'></script>
     <script src='js/toc.min.js'></script>
     <script src='js/write_items.js'></script>
 </head>
@@ -34,6 +34,10 @@
         Sponsors
     </h2>
     <div class='ui relaxed items'>
+        <a href="https://github.com/github">
+            <img src="https://avatars.githubusercontent.com/u/9919?s=48&v=4" alt="onetime: GitHub (github)"
+                title="onetime: GitHub (github)" width="48" height="48">
+        </a>
         <a href="https://github.com/b4tman">
             <img src="https://avatars.githubusercontent.com/u/3658062?s=48&v=4" alt="onetime: Dmitry Belyaev (b4tman)"
                 title="onetime: Dmitry Belyaev (b4tman)" width="48" height="48">
